# parking-spot-tracker

./: Cargo.toml  Dockerfile
charts/templates/: deployment.yaml  ingressroute.yaml  service.yaml
src/: main.rs
